--- a/GoodCSS.css
+++ b/GoodCSS.css
@@ -1,3 +1,8 @@
+/*w3schools was really good about all of this,
+ * they provided examples,
+ * code,
+ * and more. Check them out!
+*/
 .goodButtonMain {
     border-radius:4px;
     /*padding:10px 15px;*/
