--- a/GoodCSS.css
+++ b/GoodCSS.css
@@ -79,3 +79,12 @@
     95%{background-color:mediumspringgreen;}
     100%{background-color:green;}
 }
+
+@font-face {
+    font-family: "Ubuntu Light";
+    src: local("Ubuntu Light"), local("Ubuntu"), 
+        url("https://raw.githubusercontent.com/earaujoassis/ubuntu-fontface/master/fonts/ubuntu-light-italic-webfont.woff2"),
+        url("https://raw.githubusercontent.com/earaujoassis/ubuntu-fontface/master/fonts/ubuntu-light-italic-webfont.woff"), 
+        url("https://raw.githubusercontent.com/earaujoassis/ubuntu-fontface/master/fonts/ubuntu-light-italic-webfont.ttf");
+}
+.goodText { font-family: "Ubuntu Light",Verdana; }
