--- a/GoodCSS.css
+++ b/GoodCSS.css
@@ -79,7 +79,7 @@
     95%{background-color:mediumspringgreen;}
     100%{background-color:green;}
 }
-
+/*https://stackoverflow.com/a/2237896/9654083*/
 @font-face {
     font-family: "Ubuntu Light";
     src: local("Ubuntu Light"), local("Ubuntu"), 
@@ -87,4 +87,5 @@
         url("https://raw.githubusercontent.com/earaujoassis/ubuntu-fontface/master/fonts/ubuntu-light-webfont.woff"), 
         url("https://raw.githubusercontent.com/earaujoassis/ubuntu-fontface/master/fonts/ubuntu-light-webfont.ttf");
 }
+/*TODO: Find a way to do this with CSS2, for older browsers*/
 .goodText { font-family: "Ubuntu Light",Verdana; }
