--- a/GoodCSS.css
+++ b/GoodCSS.css
@@ -13,7 +13,7 @@
     background-color:aqua;
 }
 
-.goodButtonMain {
+.goodButtonMain, .goodGreenButton, .goodRedButton {
     border-radius:4px;
     /*padding:10px 15px;*/
     width:70px;
@@ -35,18 +35,17 @@
     animation-iteration-count:infinite;
     animation-duration:10s;
 }
+.goodActiveButton, .goodGreenButton:active, .goodRedButton:active {
+    box-shadow: 0 5px #666;
+    transform:translateY(2px);
 .goodGreenButton:active {
   background-color: lightgreen;
-  box-shadow: 0 5px #666;
-  transform: translateY(2px);
   animation-name:greencycle;
   animation-iteration-count:infinite;
   animation-duration:4s;
 }
 .goodRedButton:active {
   background-color: crimson;
-  box-shadow: 0 5px #666;
-  transform: translateY(2px);
   animation-name: redcycle;
   animation-iteration-count: infinite;
   animation-duration: 4s;
@@ -61,11 +60,11 @@
   100% {background-color:red}
 }
 @keyframes redcycle2 {
-    1% {background-color:red;transform:translateY(2px);}
+    1% {background-color:red;transform:translateY(-2px);}
     20%{background-color:darksalmon;}
     50%{background-color:firebrick;}
     70%{background-color:crimson;}
-    75%{border-color:darksalmon;transform:translateY(2px);}
+    75%{border-color:darksalmon;transform:translateY(-2px);}
     78%{border-color:crimson;}
     80%{background-color:red;}
     99%{background-color:firebrick;}
