--- a/GoodCSS.css
+++ b/GoodCSS.css
@@ -104,20 +104,25 @@
     95%{background-color:mediumspringgreen;}
     100%{background-color:green;}
 }
-
+/*https://stackoverflow.com/a/12851024/9654083*/
 .inCont {
     display:none;
 }
-.cont0:focus {
-    font-weight:bold;
-    outline:none;
+#cb1cover {
+    display:none;
 }
-.cont0:focus .inCont {
-    color:green;
-    font-weight:bold;
-    text-decoration:underline;
-    display:block;
-    outline:none;
-    position:relative;
-    left:100px;
+#cb1:checked ~ .cont0 {
+    pointer-events:none;
+}
+#cb1:checked ~ #cb1cover {
+    display:;
+}
+#cb1:checked ~ #cb1 {
+    pointer-events:none;
+}
+#cb1:checked ~ .inCont {
+    display: block;
+}
+#cb1 {
+    display:none;
 }
